--- a/content/themes/bleak-master/src/sass/style.scss
+++ b/content/themes/bleak-master/src/sass/style.scss
@@ -41,7 +41,7 @@ html {}
 
 body {
 	font: 300 1em / 1.5em 'Merriweather Sans', sans-serif;
-	color: $color-gray-40;
+	color: #333338;
 }
 
 ::-moz-selection, ::selection {
@@ -55,6 +55,7 @@ a {
 	font-weight: 400;
 	-webkit-transition: all ease-out 0.2s;
 	transition: all ease-out 0.2s;
+
 
 	&:hover,
 	&:focus {
@@ -136,7 +137,7 @@ ol > li:before {
 }
 ul > li:before {
 	margin-top: 0.125em;
-	content: '*';
+	content: '';
 }
 ol {
 	list-style-type: none;
@@ -555,7 +556,9 @@ body {
    ========================================================================== */
 
 #nav {
-	position: relative;
+	position: absolute;
+	right: 60px;
+	margin-top: 11px;
 	background: transparent;
 	z-index: 70;
 	transition: all ease-out 0.4s;
@@ -643,11 +646,10 @@ body {
 
 #menu {
 	display: none;
-	position: fixed;
 	left: 50%;
 	top: 5%;
 	width: 30em;
-	height: 90%;
+	height: 25%;
 	margin-left: -15em;
 	background: transparent;
 	box-sizing: border-box;
@@ -878,6 +880,12 @@ body {
 	}
 }
 
+.menu-bar {
+	
+		a {
+		margin: 1.5em;
+		}
+	}
 
 /* ==========================================================================
    Header
@@ -1083,7 +1091,7 @@ body {
    ========================================================================== */
 
 #footer {
-	position: absolute;
+	position: relative;
 	width: 100%;
 	left: 0;
 	bottom: 0;
@@ -2017,7 +2025,7 @@ body {
 			}
 		}
 	}
-
+	
 	.pagination-prev {
 		float: right;
 
