--- a/content/themes/bleak-master/default.hbs
+++ b/content/themes/bleak-master/default.hbs
@@ -16,43 +16,37 @@
 	{{ghost_head}}
 </head>
 
-
 <body class="{{body_class}}">
 	<section id="wrapper">
 		<div id="ajax-container">
 			<nav id="nav" class="nav">
-						<nav id="main-menu">
-						<div class="nav-logo">
+			
+			{{> navigation}}
+			<!-- 	<div class="nav-logo">
 					<a href="{{@blog.url}}">
 						{{#if @blog.logo}}
 						<img src="{{@blog.logo}}" alt="Logo" />
 						{{else}}
 						<span class="name">{{@blog.title}}</span>
-												{{/if}}						
-					
+						{{/if}}						
 					</a>
-					</div>
-
+				</div>
 				<div class="nav-menu">
 					{{#if @blog.navigation}}
-					
-
 					<a class="menu" data-action="menu" data-target="menu"><i class="icon-menu"></i></a>
-					<nav>
 					{{/if}}
-					</div>
+				</div> -->
 
-		
+			</nav>			
 			{{{body}}}
 			<div id="body-class" style="display: none;" class="{{body_class}}"></div>
 			<footer id="footer">
-							<section class="credits">
-					<span class="credits-theme"><a href="https://github.com/zutrinken/bleak" target="_blank" rel="nofollow"></a> <a href="http://traveltramp.nl" target="_blank" rel="nofollow"></a></span>
-					<span class="credits-software">© 2017 Traveltramp.nl - Alle rechten voorbehouden <a href="http://ghost.org" target="_blank" rel="nofollow"></a></span>
+				<section class="credits">
+					<span class="credits-theme"> <a href="https://github.com/zutrinken/bleak" target="_blank" rel="nofollow"></a><a href="http://zutrinken.com" target="_blank" rel="nofollow"></a></span>
+					<span class="credits-software">©2017 Traveltramp.nl - Alle rechten voorbehouden <a href="http://ghost.org" target="_blank" rel="nofollow"></a></span>
 				</section>
 			</footer>
 			{{#if @blog.navigation}}
-			{{navigation}}
 			{{/if}}
 		</div>
 	</section>
