--- a/content/themes/bleak-master/default.hbs
+++ b/content/themes/bleak-master/default.hbs
@@ -21,7 +21,7 @@
 		<div id="ajax-container">
 			<nav id="nav" class="nav">
 			
-			{{> navigation}}
+			{{navigation}}
 			<!-- 	<div class="nav-logo">
 					<a href="{{@blog.url}}">
 						{{#if @blog.logo}}
