--- a/content/themes/bleak-master/partials/navigation.hbs
+++ b/content/themes/bleak-master/partials/navigation.hbs
@@ -1,6 +1,6 @@
 <span class="menu-bar">
 
-		{{#foreach @blog.navigation}}
+		{{#foreach navigation}}
 		<a class="{{slug}}{{#if current}} current{{/if}}" href="{{url absolute="true"}}">{{label}}</a>
 		{{/foreach}}
 
